[package]
name = "pvde"
description = "Practical Delay Encryption circuit in halo2."
license = "MIT"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[workspace]
members = [
    "crates/big_integer",
    "crates/encryptor",
    "crates/rsa",
]
resolver = "2"

[workspace.dependencies]
big-integer = { path = "crates/big_integer" }
encryptor = { path = "crates/encryptor" }
rsa = { path = "crates/rsa" }
maingate = {git = "https://github.com/privacy-scaling-explorations/halo2wrong", rev="4e8e7047bf4151aa1b554cc6610ab7b8a8f2ec16"}
halo2wrong = {git = "https://github.com/privacy-scaling-explorations/halo2wrong", rev="4e8e7047bf4151aa1b554cc6610ab7b8a8f2ec16"}
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2", tag = "v2023_04_20"}
num-bigint = { version = "0.4", features = ["rand", "serde"] }
ff = "0.13"
group = "0.13"
subtle = { version = "2.5"}
bitvec = "1"
rand = "0.8.5"
rand_core = { version = "0.6"}
hex = "0.4.3"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
bincode = "1.3.3"

[dependencies]
big-integer = { workspace = true }
encryptor = { workspace = true }
rsa = { workspace = true }
maingate = { workspace = true  }
halo2wrong = { workspace = true  }
halo2_proofs = { workspace = true  }
num-bigint = { workspace = true  }
rand = { workspace = true  }
ff = { workspace = true  }
serde = { workspace = true  }
bincode = { workspace = true  }
serde_json = { workspace = true  }

[dev-dependencies]
rand = { workspace = true }
rand_core = { workspace = true }
sha2 = "0.10.6"
paste = "1.0.7"
proptest = "1.0.0"
uint = "0.9.2"
criterion = { version = "0.3", features = ["html_reports"] }

[lib]
doctest = false
bench = false
name = "pvde"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bench]]
name = "encryption"
harness = false

[[bench]]
name = "time_lock_puzzle"
harness = false

[target.'cfg(target_family = "wasm")'.dependencies]
getrandom = { version = "0.2", features = ["js"]}
wasm-bindgen = { version = "0.2.81", features = ["serde-serialize"]}
console_error_panic_hook = "0.1.7"
rayon = "1.5"

web-sys = { version = "0.3", features = ["Request", "Window", "Response"] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde-wasm-bindgen = "0.4"