[package]
name = "encryptor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
doctest = false

[dependencies]
ff = { workspace = true }
num-bigint = { workspace = true }
halo2wrong = { workspace = true }
halo2_proofs = { workspace = true }
maingate = { workspace = true }
rand_core = { workspace = true }
serde = { workspace = true }