[package]
name = "rsa"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
doctest = false

[dependencies]
ff = { workspace = true }
num-bigint = { workspace = true }
halo2wrong = { workspace = true }
maingate = { workspace = true }
big-integer = { workspace = true }
rand = { workspace = true }