[package]
name = "skde"
description = "Practical Delay Encryption circuit in halo2."
license = "MIT"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[workspace]
members = [
    "crates/hash",
    "crates/poseidon",
    "crates/big_integer",
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
maingate  = { workspace = true }
halo2wrong  = { workspace = true }
rand  = { workspace = true }
rand_core  = { workspace = true }
num-bigint = { workspace = true }
num-traits = { workspace = true }
ff  = { workspace = true }
group  = { workspace = true }
subtle  = { workspace = true }
bitvec  = { workspace = true }
sha2  = { workspace = true }
rayon  = { workspace = true }
big-integer = { workspace = true }
poseidon = { workspace = true }
hash = { workspace = true }
serde = { workspace = true }
const-hex = "1.12"
serde-wasm-bindgen = "0.4"
wasm-bindgen = "0.2"

[workspace.dependencies]
serde = { version = "1.0.197", features = ["derive"] }
big-integer = { path = "crates/big_integer" }
hash = { path = "crates/hash" }
poseidon = { path = "crates/poseidon" }
maingate = { git = "https://github.com/privacy-scaling-explorations/halo2wrong", tag = "v2023_04_20", default-features = false }
halo2wrong = { git = "https://github.com/privacy-scaling-explorations/halo2wrong", tag = "v2023_04_20", default-features = false }
rand = "0.8.5"
rand_core = { version = "0.6", default-features = false }
num-bigint = { version = "0.4", features = ["rand", "serde"] }
num-traits = "0.2"
ff = "0.13"
group = "0.13"
subtle = { version = "2.3", default-features = false }
bitvec = "1"
sha2 = "0.10.6"
rayon = "1.5.1"


[dev-dependencies]
paste = "1.0.7"
proptest = "1.0.0"
criterion = { version = "0.3", features = ["html_reports"] }

[lib]
name = "skde_wasm"
crate-type = ["cdylib", "rlib"]
doctest = false
bench = false

[[bench]]
name = "aggregate"
harness = false

[[bench]]
name = "aggregate_with_hash"
harness = false

[profile.release]
debug = true

[target.'cfg(target_family = "wasm")'.lib]
name = "brbr_wasm"


[target.'cfg(target_family = "wasm")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = { version = "0.2.81", features = ["serde-serialize"] }
console_error_panic_hook = "0.1.7"
rayon = "1.5"
web-sys = { version = "0.3", features = ["Request", "Window", "Response"] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde-wasm-bindgen = "0.4"