[package]
name = "skde"
description = "Single Key Delay Encryption WASM"
license = "MIT"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.76"

[workspace]

# Cleaned dependencies for your project based on the provided code
[dependencies]
skde = { git = "https://github.com/radiusxyz/skde", rev="3549a4da49053394d3f1aef58ddd2ab416585bbb"}
serde = { version = "1.0.197", features = ["derive"] }
serde-wasm-bindgen = "0.4"
wasm-bindgen = { version = "0.2.81", features = ["serde-serialize"] }
js-sys = "0.3"
num-bigint = { version = "0.4", features = ["rand", "serde"] }

[dev-dependencies]
paste = "1.0.7"
proptest = "1.0.0"
criterion = { version = "0.3", features = ["html_reports"] }

[lib]
name = "skde_wasm"
path = "./wasm.rs"
crate-type = ["cdylib", "rlib"]
doctest = false
bench = false

[target.'cfg(target_family = "wasm")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = "0.1.7"
rayon = "1.5"
web-sys = { version = "0.3", features = ["Request", "Window", "Response"] }
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.4"
